// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`compileVerificationBlock — empty no verification entries renders an explicit "no verification results" section 1`] = `
"Verification outcomes for the current subagent. Each row names a verification command, its policy (gate or inform), and the pass/fail/timeout result. Gate-policy failures block the workflow's advance; inform-policy failures are advisory only. Stderr and stdout digests are the leading 8 hex characters of the runner's sha256 capture — use them to diff run-to-run without loading the full streams.

Subagent: sub-missing (0 results)

Verification results for subagent sub-missing:
  no verification results"
`;

exports[`compileVerificationBlock — empty no verification entries renders an explicit "no verification results" section 2`] = `
[
  {
    "id": "verification.header",
    "kind": "static",
  },
  {
    "id": "verification.session",
    "kind": "session",
  },
  {
    "id": "verification.results",
    "kind": "dynamic",
  },
]
`;

exports[`compileVerificationBlock — all pass every command passing renders a compact success table 1`] = `
"Verification outcomes for the current subagent. Each row names a verification command, its policy (gate or inform), and the pass/fail/timeout result. Gate-policy failures block the workflow's advance; inform-policy failures are advisory only. Stderr and stdout digests are the leading 8 hex characters of the runner's sha256 capture — use them to diff run-to-run without loading the full streams.

Subagent: sub-1 (3 results)

Verification results for subagent sub-1:
  lint       [inform] pass (2413ms)
  typecheck  [gate]   pass (18902ms)
  test       [gate]   pass (45230ms)"
`;

exports[`compileVerificationBlock — mixed pass/fail mixed outcomes render a failure-details block after the pass table 1`] = `
"Verification outcomes for the current subagent. Each row names a verification command, its policy (gate or inform), and the pass/fail/timeout result. Gate-policy failures block the workflow's advance; inform-policy failures are advisory only. Stderr and stdout digests are the leading 8 hex characters of the runner's sha256 capture — use them to diff run-to-run without loading the full streams.

Subagent: sub-2 (3 results)

Verification results for subagent sub-2:
  lint       [inform] pass (2413ms)
  typecheck  [gate]   pass (18902ms)
  test       [gate]   fail (exitCode 1, 45230ms)    stderr digest: 3f2a1b00

Failure details:
  test:
    stderr digest: 3f2a1b00
    stdout digest: 7c8e4000
    timed out: no
    policy: gate"
`;

exports[`compileVerificationBlock — timeout timed-out command renders the "timed out after Xms" marker 1`] = `
"Verification outcomes for the current subagent. Each row names a verification command, its policy (gate or inform), and the pass/fail/timeout result. Gate-policy failures block the workflow's advance; inform-policy failures are advisory only. Stderr and stdout digests are the leading 8 hex characters of the runner's sha256 capture — use them to diff run-to-run without loading the full streams.

Subagent: sub-3 (2 results)

Verification results for subagent sub-3:
  lint       [inform] pass (2413ms)
  build      [gate]   timed out after 60000ms

Failure details:
  build:
    stderr digest: 3f2a1b00
    stdout digest: 7c8e4000
    timed out: yes
    policy: gate"
`;

exports[`compileVerificationBlock — gate vs inform policy tag visibly distinguishes gate from inform rows 1`] = `
"Verification outcomes for the current subagent. Each row names a verification command, its policy (gate or inform), and the pass/fail/timeout result. Gate-policy failures block the workflow's advance; inform-policy failures are advisory only. Stderr and stdout digests are the leading 8 hex characters of the runner's sha256 capture — use them to diff run-to-run without loading the full streams.

Subagent: sub-4 (4 results)

Verification results for subagent sub-4:
  lint       [inform] pass (1000ms)
  typecheck  [gate]   pass (2000ms)
  test       [inform] pass (3000ms)
  build      [gate]   pass (4000ms)"
`;
